A minimal, working React App
Webpack config applies babel-loader to js files at entry point /src/index.js. HtmlWebpackPlugin automatically creates the index.html file to be placed in the output path at /dist/index.html from the template provided at /src/index.html.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "React app boilerplate",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
